@@ -27,6 +27,8 @@ x^2 - x - 1
 Mod(1, 3)*x^2 + Mod(1, 3)*x + Mod(1, 3)
 Mod(1, 18446744073709551629)*x^2 + Mod(18446744073709551627, 184467440737095
 51629)*x + Mod(1, 18446744073709551629)
+1
+x^6 - x^5 - 3*x^4 - 3*x^3 - 3*x^2 - x + 1
 x^4 - 4*x^3 + 6*x^2 - 4*x + 1
 x^4 - 4*x^3 + 6*x^2 - 4*x + 1
 x^4 - 73786976294838206516*x^3 + 2041694201525630783657939720089299321846*x^
@@ -75,4 +77,4 @@ x - 1
   ***   at top-level: charpoly(Mod('b,'b^2+Mod('a,'a^2+1)),'newvar)
   ***                 ^---------------------------------------------
   *** charpoly: incorrect priority in RgXQ_charpoly: variable newvar < a
-Total time spent: 6
+Total time spent: 9
