@@ -14,6 +14,18 @@ mateigen(A,1)
 M=[x,x+y;x+1,1];charpoly(M,w)
 v=[1,1.,Mod(1,3),1/2,1+O(3),I,quadgen(5),matid(2)*Mod(1,3),matid(2)*Mod(1,2^64+13)];
 for(i=1,#v,print(charpoly(v[i])))
+
+{ \\ #2010
+g(s2,s3)=s6=s2*s3;[2,0,0,-s6+3,2*s3-3*s2,3*s3-3*s2;
+   0,-2,0,s3-s2,-s6+2,-s6+3;
+   0,0,-1,s3-2*s2,-s6+1,-s6+3;
+   0,0,s3,2*s6-6,-5*s3+6*s2,-6*s3+7*s2;
+   -2*s3,2,-s6+5,-7*s3+10*s2,8*s6-21,9*s6-27;
+   2*s3,-2,s6-5,8*s3-11*s2,-9*s6+23,-10*s6+30]/2;
+}
+exponent(charpoly(g(sqrt(2),sqrt(3))) - (x^6-x^5-3*x^4-3*x^3-3*x^2-x+1)) < -120
+centerlift(charpoly(g(sqrt(2+O(23^10)), sqrt(3+O(23^10)))))
+
 charpoly(matid(4),,0)
 charpoly(matid(4),,3)
 charpoly(matid(4)*(2^64+13))
