@@ -172,6 +172,7 @@ BA  129- default(strictargs,1); my(a=2);(f(b,c)=123);f(1) => SEGV [#2004]
     143- nffactor(y^8-y^6+y^4-y^2+1,x^4-1) -> concatenation error [#2009]
     144- vecsort / vecsearch: comparison function was required to assume
          integral values; allow t_INT, t_FRAC or t_REAL
+    145- mathess was very unstable, and so was charpoly(,,2) [#2010]
 
   Added
       1- [libari] ZM_isidentity
